v4.2.13 (work-in-progress)
     * Make the Python Histogram classes returned by the MiniMC framework much
       more feature complete, adding several features intended to make
       subsequent data analysis easier.
     * Fix several issues in the C++ templates used to implement the histograms
       used by the MiniMC framework. These issues all concerned features not
       actually used by the MiniMC in past releases (fixes github issue #300).
     * Minor bugfix in histogram objects returned by the MiniMC framework. The
       integrate(..) method of these objects now supports integration to include
       the last bin.
     * Add small unscientific but completely reproducible RNG for Python unit
       tests.
     * Add comprehensive (>99% coverage) unit test for python histograms.
     * NCRandUtils.hh: Add randPointInUnitCircle utility.
     * Fix flawed asserts preventing proper MiniMC usage in debug builds.
     * ...

v4.2.12 2026-01-05
     * Support spglib release 2.7.0 which changed module names and error
       handling. For now, we still support older spglib releases (back to
       2.1.0).
     * Bump end-year in copyright statements to 2026.

v4.2.10 2025-10-20
     * Add doInfo, doScatter, and doAbsorption flags to the NCMATComposer.load
       method (github issue #280).
     * Add more dedicated unit tests for NCMATComposer.
     * Add missing include in NCrystal/internal/utils/NCHists.hh.
     * Expose internal Hist1D utility Python class in new (still internal)
       _hist.py module, for potential usage in unit testing.

v4.2.8 2025-07-25
     * Fix spurious test failure in py_rl_n2endf_bad test.

v4.2.6 2025-07-25
     * Update to use endf-parserpy 0.14.

v4.2.4 2025-07-24
     * Add B4C_sg166_BoronCarbide.ncmat, representing the crystal structure of
       ideal B12C3 boron-carbide (github issues #162 and #207). Dynamics are
       approximated with Debye temperatures.